--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
             <version>${version.cxf}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
 
     </dependencies>
     <build>
