--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,10 +1,10 @@
-#mongo.host=ds064718.mlab.com
-#mongo.port=64718
-#mongo.db=serials
-#mongo.username=1240
-#mongo.password=1234qwer
-mongo.host=127.0.0.1
+mongo.host=192.168.1.18
 mongo.port=27017
 mongo.db=serial
 mongo.username=l24o
 mongo.password=1234qwer
+#mongo.host=127.0.0.1
+#mongo.port=27017
+#mongo.db=serial
+#mongo.username=l24o
+#mongo.password=1234qwer
